# webrtc-ops-env

./: .dockerignore  .gitignore  Dockerfile  README.md  README_HF.md  __init__.py  client.py  deploy_to_hf.py  index.html  inference.py  models.py  openenv.yaml  pyproject.toml  script.js  style.css
server/: Dockerfile  __init__.py  app.py  requirements.txt  webrtc_environment.py
